Revision history for DBIx::Class

        - select et al weren't properly detecing when the server connection
          had timed out when not in a transaction
        - The SQL::T parser class now respects a relationship attribute of
          is_foreign_key_constrain to allow explicit control over wether or not
          a foreign constraint is needed

0.07999_02 2007-01-25 20:11:00
        - add support for binding BYTEA and similar parameters (w/Pg impl)
        - add support to Ordered for multiple ordering columns
        - mark DB.pm and compose_connection as deprecated
        - switch tests to compose_namespace
        - ResltClass::HashRefInflator added
        - Changed row and rs objects to not have direct handle to a source,
          instead a (schema,source_name) tuple of type ResultSourceHandle

0.07999_01 2006-10-05 21:00:00
        - add connect_info option "disable_statement_caching"
        - create insert_bulk using execute_array, populate uses it
        - added DBIx::Class::Schema::load_namespaces, alternative to
          load_classes
        - added source_info method for source-level metadata (kinda like
          column_info)
        - Some of ::Storage::DBI's code/docs moved to ::Storage
        - DBIx::Class::Schema::txn_do code moved to ::Storage
        - Storage::DBI now uses exceptions instead of ->ping/->{Active} checks
        - Storage exceptions are thrown via the schema class's throw_exception
        - DBIx::Class::Schema::throw_exception's behavior can be modified via
          ->exception_action
        - columns_info_for is deprecated, and no longer runs automatically.
          You can make it work like before via
          __PACKAGE__->column_info_from_storage(1) for now
        - Replaced DBIx::Class::AccessorGroup and Class::Data::Accessor with
          Class::Accessor::Grouped. Only user noticible change is to
          table_class on ResultSourceProxy::Table (i.e. table objects in